fixed header padding better look on mobile fixed weird text wrap

--- a/src/scss/1_components/cover/_cover.scss
+++ b/src/scss/1_components/cover/_cover.scss
@@ -1,8 +1,8 @@
 .cover {
   min-height: 100%;
-  padding-top: 1.2em;
-  padding-left: 0.75em;
-  padding-right: 0.75em;
+  padding-top: 1.2rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 
   overflow: hidden;
 
